# ChangeLog for net-misc/shmux
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/shmux/ChangeLog,v 1.20 2007/03/10 20:36:08 nixnut Exp $

  10 Mar 2007; nixnut <nixnut@gentoo.org> shmux-1.0.ebuild:
  Stable on ppc wrt bug 169532

  05 Mar 2007; Raúl Porcel <armin76@gentoo.org> shmux-1.0.ebuild:
  x86 stable wrt bug 169532

  03 Feb 2007; Sven Wegener <swegener@gentoo.org> shmux-1.0.ebuild:
  Add ~amd64 keyword.

*shmux-1.0 (05 Sep 2006)

  05 Sep 2006; Sven Wegener <swegener@gentoo.org> +shmux-1.0.ebuild:
  Version bump.

*shmux-1.0_beta10 (12 Aug 2006)

  12 Aug 2006; Sven Wegener <swegener@gentoo.org> +shmux-1.0_beta10.ebuild:
  Version bump.

*shmux-1.0_beta9 (07 Jul 2006)

  07 Jul 2006; Sven Wegener <swegener@gentoo.org> -shmux-1.0_beta8.ebuild,
  +shmux-1.0_beta9.ebuild:
  Version bump.

*shmux-1.0_beta8 (01 Jul 2006)

  01 Jul 2006; Sven Wegener <swegener@gentoo.org> -shmux-1.0_beta7.ebuild,
  +shmux-1.0_beta8.ebuild:
  Version bump.

*shmux-1.0_beta7 (23 May 2006)

  23 May 2006; Sven Wegener <swegener@gentoo.org> +shmux-1.0_beta7.ebuild:
  Version bump.

  21 Jan 2005; Sven Wegener <swegener@gentoo.org> -shmux-1.0_beta5.ebuild,
  shmux-1.0_beta6.ebuild:
  Marked stable on x86. Removed old ebuild.

*shmux-1.0_beta6 (16 Dec 2004)

  16 Dec 2004; Sven Wegener <swegener@gentoo.org> +shmux-1.0_beta6.ebuild:
  Version bump.

  06 Nov 2004; Sven Wegener <swegener@gentoo.org> -shmux-1.0_beta4.ebuild,
  shmux-1.0_beta5.ebuild:
  Marked stable on x86. Removed old ebuild.

*shmux-1.0_beta5 (21 Sep 2004)

  21 Sep 2004; Sven Wegener <swegener@gentoo.org> +shmux-1.0_beta5.ebuild:
  Version bump.

  08 Sep 2004; Sven Wegener <swegener@gentoo.org> -shmux-1.0_beta3.ebuild,
  shmux-1.0_beta4.ebuild:
  Marked stable on x86. Removed old ebuild.

  14 Aug 2004; Sven Wegener <swegener@gentoo.org> shmux-1.0_beta3.ebuild:
  Marked stable on x86.

  13 Aug 2004; Sven Wegener <swegener@gentoo.org> metadata.xml: