@@ -1,27 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST shmux-1.0.tgz 81096 RMD160 5b45f744fb85ccd99534f0b13d12a9bc49cea9e1 SHA1 3a5fef29ea7f2631668af348d651079fd65a1321 SHA256 d97b2d7f01b32a4a92a87df4320249228da55d9ff0ae8c0e6319c131a0404782
-DIST shmux-1.0b10.tgz 81101 RMD160 9a473453dbf30daa94dc1f0a248d8ca4416027ba SHA1 be9cd1d1e101b10bb2bfbdf11f5a46781916286c SHA256 bf26cb07c733b130fa1c5fa44482e97839b9cc10511658273a76175eb4105525
-DIST shmux-1.0b6.tgz 77463 RMD160 042abc604308a833a1fbbda09591bf2d8146e137 SHA1 2b8121c76e4d135d740d8c104a07fca748ff3ac4 SHA256 434308fb7ade9fa9833a5f45a3a9da0bd32bfb0262e8f4885a58b20f1f3d20f5
-DIST shmux-1.0b9.tgz 80271 RMD160 dfb50b371640831bf3a93b36cbdd83730f41bf27 SHA1 7bcf816c71e40e7c5847f7ec03322a1c21149914 SHA256 f410b91484adc5e24335e960e3aec27963197da45fc256acf2391efd9f8c097b
 EBUILD shmux-1.0.ebuild 749 RMD160 ad19c9f126f0d384743a26e860e82e4b06faa36a SHA1 d683db7d52d1ef4c8c9c37f6960cb5fadc226bc1 SHA256 5797491f0dfcae09a80b536351dc91b643de11b38b35e9c4e9ef4bce76806c89
 MD5 4c923b8a285ff800886bcd87de19f1dd shmux-1.0.ebuild 749
 RMD160 ad19c9f126f0d384743a26e860e82e4b06faa36a shmux-1.0.ebuild 749
 SHA256 5797491f0dfcae09a80b536351dc91b643de11b38b35e9c4e9ef4bce76806c89 shmux-1.0.ebuild 749
-EBUILD shmux-1.0_beta10.ebuild 797 RMD160 3edb9e928cd61d310a1713440f3272fb10999af5 SHA1 1104c75a4d797b61136b848c06a730262782e6a2 SHA256 793962c99cd09d83173509b5bec80a8bf94c768294f0de472227d21ab4a04235
-MD5 0cc43c5a8b4d36468a0df3712f87b49d shmux-1.0_beta10.ebuild 797
-RMD160 3edb9e928cd61d310a1713440f3272fb10999af5 shmux-1.0_beta10.ebuild 797
-SHA256 793962c99cd09d83173509b5bec80a8bf94c768294f0de472227d21ab4a04235 shmux-1.0_beta10.ebuild 797
-EBUILD shmux-1.0_beta6.ebuild 795 RMD160 8bbfb691e391096204139a9c2a7a09b921353805 SHA1 74f6f8899b4f71456bb22ca32241aa5e56d30828 SHA256 b161069c57e169c7d63eaf1a4225d589f5ee80ceef68c47a5a05f355a40e752d
-MD5 1c6b8a052933c9592b7f2d7d1c31ecf7 shmux-1.0_beta6.ebuild 795
-RMD160 8bbfb691e391096204139a9c2a7a09b921353805 shmux-1.0_beta6.ebuild 795
-SHA256 b161069c57e169c7d63eaf1a4225d589f5ee80ceef68c47a5a05f355a40e752d shmux-1.0_beta6.ebuild 795
-EBUILD shmux-1.0_beta9.ebuild 796 RMD160 78e89d4603b3eeaa695668c05f01be3aeb4cc347 SHA1 25930f948bc83d2f3ccfe0784511d4253470bd2b SHA256 000a7ff69435ef25e195795949045a5e389aa4097877ec463392639d8c24d48a
-MD5 572ff8940cd00e42b0870b0432d2a011 shmux-1.0_beta9.ebuild 796
-RMD160 78e89d4603b3eeaa695668c05f01be3aeb4cc347 shmux-1.0_beta9.ebuild 796
-SHA256 000a7ff69435ef25e195795949045a5e389aa4097877ec463392639d8c24d48a shmux-1.0_beta9.ebuild 796
-MISC ChangeLog 2644 RMD160 10f1632b12219ba7f93daadc66fc3d94cabb6585 SHA1 1420fc187dc999f829420a53bc5d45069d13a0e6 SHA256 62112fb1db8a7bf7a3fe423bd9b7c974469e95effd78d94d6743e49ec61ef97b
-MD5 99adc6b8ec45b90069ae23a9cba34e67 ChangeLog 2644
-RMD160 10f1632b12219ba7f93daadc66fc3d94cabb6585 ChangeLog 2644
-SHA256 62112fb1db8a7bf7a3fe423bd9b7c974469e95effd78d94d6743e49ec61ef97b ChangeLog 2644
+MISC ChangeLog 2786 RMD160 a8a36245fe7846abfe8b88d2d94aa5481e1c0a59 SHA1 61528826291afb83a0b53472626ff6b4712ac116 SHA256 12e6b642d1e30a86f6b1014b31e1acff2a8eee98865cf77608b628785679b857
+MD5 8edf0dbf80b537784ee41e4e7e029d66 ChangeLog 2786
+RMD160 a8a36245fe7846abfe8b88d2d94aa5481e1c0a59 ChangeLog 2786
+SHA256 12e6b642d1e30a86f6b1014b31e1acff2a8eee98865cf77608b628785679b857 ChangeLog 2786
 MISC metadata.xml 807 RMD160 45697b96bc1d10cc8d3b720df58c8ac18c46747b SHA1 bef3fb456e33e3340acfad701ad4df251ec11a1a SHA256 66c978d86dacf3af85371897bc778c9c8fc6d7fc173b338d651b53945f736577
 MD5 a0fae7a456514165d86dcc501c78e5ae metadata.xml 807
 RMD160 45697b96bc1d10cc8d3b720df58c8ac18c46747b metadata.xml 807
@@ -29,12 +17,10 @@ SHA256 66c978d86dacf3af85371897bc778c9c8fc6d7fc173b338d651b53945f736577 metadata
 MD5 227e1b01e8fbbb8fcce9d6684981e330 files/digest-shmux-1.0 217
 RMD160 5b9f1ef83ed33ca8877264fe2e8a445013c4e69b files/digest-shmux-1.0 217
 SHA256 03127c81385432f28fa0edd52da6b10c4d541056f30458bd93fd69770572b560 files/digest-shmux-1.0 217
-MD5 c50cce88413e69a7c2d7437ef30a3dcc files/digest-shmux-1.0_beta10 226
-RMD160 df5ea3be5a7aa4bd664e32be9da5150eb8b45474 files/digest-shmux-1.0_beta10 226
-SHA256 4b01203e8a95fc1f38532b7e3a4d3098ec0372d7a786922f3e5d650167b1552e files/digest-shmux-1.0_beta10 226
-MD5 9260ab2acae05bf567950cdf45ff18bf files/digest-shmux-1.0_beta6 223
-RMD160 05c81510ef4e2ba59f57fb949b1fa1008aaf6191 files/digest-shmux-1.0_beta6 223
-SHA256 812bf5df5591a1826b673d9fc50c1f4a5689562752d8956fb66de035f9c65467 files/digest-shmux-1.0_beta6 223
-MD5 9d43b6706189f99b78a8da7b2f90f56d files/digest-shmux-1.0_beta9 223
-RMD160 0fdcfbe22504ca4f6ac907bbaddd679142da6ede files/digest-shmux-1.0_beta9 223
-SHA256 d60a06c5bbf26f3f76935a605d8301fd6b4484ef53185d16a5aff175993a5a36 files/digest-shmux-1.0_beta9 223
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.3 (GNU/Linux)
+
+iD8DBQFF8yz9I1lqEGTUzyQRApXsAJkBo7tVJfJ34FVuQJVLfAb9B+ZMbwCgtK7I
+64KHdB1ivoPpvxEzv+hlShc=
+=ruMr
+-----END PGP SIGNATURE-----
