@@ -1,3 +1,0 @@
-MD5 75b24b2bee53b3601b108c206827b7ae shmux-1.0b10.tgz 81101
-RMD160 9a473453dbf30daa94dc1f0a248d8ca4416027ba shmux-1.0b10.tgz 81101
-SHA256 bf26cb07c733b130fa1c5fa44482e97839b9cc10511658273a76175eb4105525 shmux-1.0b10.tgz 81101
