@@ -1,3 +1,0 @@
-MD5 cfd981b86420c1c5f75eccc0aeda38c1 shmux-1.0b6.tgz 77463
-RMD160 042abc604308a833a1fbbda09591bf2d8146e137 shmux-1.0b6.tgz 77463
-SHA256 434308fb7ade9fa9833a5f45a3a9da0bd32bfb0262e8f4885a58b20f1f3d20f5 shmux-1.0b6.tgz 77463
