@@ -1,3 +1,0 @@
-MD5 bdc85a5b5ffbda70c4d3fd53bdedd795 shmux-1.0b9.tgz 80271
-RMD160 dfb50b371640831bf3a93b36cbdd83730f41bf27 shmux-1.0b9.tgz 80271
-SHA256 f410b91484adc5e24335e960e3aec27963197da45fc256acf2391efd9f8c097b shmux-1.0b9.tgz 80271
