@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/shmux
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/shmux/ChangeLog,v 1.20 2007/03/10 20:36:08 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/shmux/ChangeLog,v 1.21 2007/03/10 22:10:34 swegener Exp $
+
+  10 Mar 2007; Sven Wegener <swegener@gentoo.org> -shmux-1.0_beta6.ebuild,
+  -shmux-1.0_beta9.ebuild, -shmux-1.0_beta10.ebuild:
+  Cleanup.
 
   10 Mar 2007; nixnut <nixnut@gentoo.org> shmux-1.0.ebuild:
   Stable on ppc wrt bug 169532
